--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/responsive.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <title>JDweb</title>
 </head>
@@ -53,7 +54,7 @@
             <div class="contenedor2">
                 <h2 class="title">Ofrecemos una amplia gama.</h2>
                 <div class="contenedor-articles">
-                    <div class="article">
+                    <div class="article" data-aos="zoom-in-right" data-aos-duration="500">
                         <i class="fas fa-pen-fancy"></i>
                         <h3>Diseño Grafico</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium totam esse
@@ -61,7 +62,7 @@
                             odio, sit officiis minus ipsum quos.</p>
                             <a href="#">Leer mas --></a>
                     </div>
-                    <div class="article">
+                    <div class="article" data-aos="zoom-in-right" data-aos-duration="500">
                         <i class="fas fa-code"></i>
                         <h3>Diseño Web</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium totam esse
@@ -69,7 +70,7 @@
                             odio, sit officiis minus ipsum quos.</p>
                         <a href="#">Leer mas --></a>
                     </div>
-                    <div class="article">
+                    <div class="article" data-aos="zoom-in-right" data-aos-duration="500">
                         <i class="fas fa-cog"></i>
                         <h3>Producción de Video</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium totam esse
@@ -77,7 +78,7 @@
                             odio, sit officiis minus ipsum quos.</p>
                         <a href="#">Leer mas --></a>
                     </div>
-                    <div class="article">
+                    <div class="article" data-aos="zoom-in-right" data-aos-duration="500">
                         <i class="fas fa-chart-pie"></i>
                         <h3>SEO</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium totam esse
@@ -85,7 +86,7 @@
                             odio, sit officiis minus ipsum quos.</p>
                         <a href="#">Leer mas --></a>
                     </div>
-                    <div class="article">
+                    <div class="article" data-aos="zoom-in-right" data-aos-duration="500">
                         <i class="fas fa-comments"></i>
                         <h3>Marketing</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium totam esse
@@ -93,7 +94,7 @@
                             odio, sit officiis minus ipsum quos.</p>
                         <a href="#">Leer mas --></a>
                     </div>
-                    <div class="article">
+                    <div class="article" data-aos="zoom-in-right" data-aos-duration="500">
                         <i class="fas fa-chart-bar"></i>
                         <h3>Infografías</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium totam esse
@@ -111,25 +112,25 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, unde?</p>
                 <a href="#">Ver más</a>
             </section>
-            <img src="./img/segundaIlustracion.svg" alt="Segunda Ilustacion">
+            <img src="./img/segundaIlustracion.svg" alt="Segunda Ilustacion" data-aos="zoom-out-up" data-aos-duration="1000">
         </section>
 
         <section class="resultados">
             <div class="contenedor2 content-resultados">
                 <section class="secciones">
-                    <div class="seccion">
+                    <div class="seccion" data-aos="zoom-in-left" data-aos-duration="500">
                         <h4>+6274</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, architecto.</p>
                     </div>
-                    <div class="seccion">
+                    <div class="seccion" data-aos="zoom-in-left" data-aos-duration="500">
                         <h4>+6274</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, architecto.</p>
                     </div>
-                    <div class="seccion">
+                    <div class="seccion" data-aos="zoom-in-left" data-aos-duration="500">
                         <h4>+6274</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, architecto.</p>
                     </div>
-                    <div class="seccion">
+                    <div class="seccion" data-aos="zoom-in-left" data-aos-duration="500">
                         <h4>+6274</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, architecto.</p>
                     </div>
@@ -144,7 +145,7 @@
         </section>
 
         <section class="servicios contenedor2">
-            <img src="./img/terceraIlustracion.svg" alt="Tercera Ilustacion">
+            <img src="./img/terceraIlustracion.svg" alt="Tercera Ilustacion" data-aos="zoom-out-right" data-aos-duration="1500">
             <div class="box-skills">
                 <h4><i class="far fa-check-circle"></i>Diseño Web</h4>
                 <h4><i class="far fa-check-circle"></i>Desarrollo Web</h4>
@@ -180,7 +181,10 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/ff2213df1a.js" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
